configured dark mode feature - stll buggy

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,4 +1,3 @@
-
 *
 {
   font-family: Arial, Helvetica, sans-serif;
@@ -66,6 +65,13 @@ body
   border-radius: 100%;
   padding: 2px;
   transform: translateX(35px);
+  transition: 250ms ease-in;
+}
+.isDarkMode
+{
+  background: black !important;
+  transform: translateX(0) !important;
+  transition: 250ms ease-in;
 }
 .top-bar-1 .switch i
 {
@@ -73,6 +79,10 @@ body
   height: 20px;
   width: 20px;
   padding: 2px;
+}
+.bxs-moon
+{
+  color: white;
 }
 
 
@@ -257,6 +267,7 @@ main .hero-delivery
 {
   display: flex;
   justify-content: space-between;
+  margin: 10px;
 }
 main .hero-delivery div
 {
@@ -309,7 +320,7 @@ main .carousel
   height: 720px;
   width: 100%;
   border-radius: 10px;
-  margin-top: 20px;
+  margin: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -338,11 +349,6 @@ main .carousel
   object-fit: cover;
   font-size: 100px;
 }
-.carousel .slides div[data-active]
-{
-  background: red;
-}
-
 
 .carousel .arrows
 {
@@ -411,7 +417,7 @@ footer p
 }
 footer p a
 {
-  color: black;
+  color: inherit;
   text-decoration: none;
 }
 footer p a:hover
@@ -437,6 +443,28 @@ footer ul li:hover
   text-decoration: underline;
   cursor: pointer;
 }
+
+[data-dark-mode], .dark-body
+{
+  transition: 250ms ease-out;
+}
+
+.dark-body {
+  background: rgb(31 41 55);
+}
+.dark-background
+{
+  background: rgb(17 24 39)
+}
+.dark-text
+{
+  color: white;
+}
+
+/* @media (prefers-color-scheme: dark) 
+{
+
+} */
 
 /* @media (max-width: 1280px) {
   body
